# good-agent

./: .gitignore  AGENTS.md  BLOCKED.md  CHANGELOG.md  DECISIONS.md  LICENSE  LITELLM_IMPLEMENTATION_SPEC.md  LITELLM_REPLACEMENT_PLAN.md  MIGRATION.md  PHASE4_MESSAGE_API_PROPOSAL.md  PHASE4_SESSION_SUMMARY.md  README.md  TECH_DEBT.md  mkdocs.yml  pyproject.toml  refactoring-plan-audit.md  reproduce_context_injection.py  test_helpers.pyi
.factory/droids/: pytest-runner.md
.github/workflows/: ci-cd.yml
.serena/: project.yml
.serena/memories/: entrypoints.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
.spec/: 00-executive-summary.md  01-architectural-issues.md  02-code-duplication.md  04-documentation-issues.md  05-naming-conventions.md  07-test-coverage-analysis.md  08-recommendations.md  GoodAgentOnePager.md  README.md  agent-routing-orchestration.md  coverage-hardening.md  cutting-edge-features-analysis.md  event-context-mypy-fix.md  message-store-redis-fallback-compat-2025-11-18.spec.md  model-manager-callback-patching.md  modes-improvements.md  mypy-cleanup-2025-11-17.md  phase3-4-audit.md  prompts-cli-path-normalization.spec.md  pytest-failures-2025-11-17.md  pytest-testing-approach.md  refactoring-plan.md  remove_module_docstrings.md  sync-bridge-stress-hang.spec.md
.spec/.archive/: 2025-11-13_spec_missing-goodintel-core-import.md  2025-11-13_summary_phase1summary.md  2025-11-13_summary_phase2summary.md  2025-11-15_summary_template-consolidation.md  2025-11-16_summary_phase3-4-audit.md  2025-11-17_spec_citation-typing-cleanup.md  2025-11-17_spec_event-router-pytest-compat.md  2025-11-17_spec_remove-compat-shims.md  2025-11-18_summary_phase5-completion.md  2025-11-18_summary_refactoring-plan.md  2025-11-19_ref_changelog-archive.md  AUDIT_REPORT_2025_11_19.md  INDEX.md  REORGANIZATION_SUMMARY.md  markdown-extensions-hang.md  message-store-async-exists-fix.spec.md  mypy-tests-cleanup-2025-11-17.md  search-dedup-performance-benchmark.md  streaming.md
.spec/.reviews/: 03-file-size-analysis.md  06-api-design-issues.md
.spec/analysis/: mock-usage-patterns-and-utilities.md
.spec/client/: COMPLETION_SUMMARY.md  COST_DATA_CACHING_DESIGN.md  EXTENSIBILITY_DESIGN.md  INDEX.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  TESTING_STRATEGY.md  TEST_IMPLEMENTATION_EXAMPLES.md
.spec/features/: IMPLEMENTATION_COMPLETE.md  agent-cli-and-builtins.md  agent-search-provider-completion.md  github-pages-docs-deploy.md  handler-based-mocking.md  hashfiles-cache-consistency.md  llm-vcr-ci-stability.md  mkdocs-coverage-integration.md  mock-mypy-cleanup.md  mypy-cleanup-tasks.md  release-automation-parity.md
.spec/v1/: AGENT_DESIGN_AUDIT.md  DESIGN.md  DOCUMENTATION.md  GoodAgentOnePager.md  HALLUCINATIONS.md  agent-mode-flow.md  concepts.md  feature-spec-reference.md  spec-mode-generators-implementation.md  spec-modes-updates.md  spec-modes-v2-complete.md
coverage/phase5/: baseline.json  baseline.xml
docs/: DECISIONS.md  MIGRATION.md  STYLEGUIDE.md  TECH_DEBT.md  api-reference.md  index.md  planned-features.md
docs/cli/: config.md  run.md  serve.md
docs/components/: best-practices.md  built-ins.md  creating-components.md  dependencies.md  events.md  index.md  testing.md  tool-adapters.md
docs/core/: agents.md  custom-tools.md  events.md  messages.md  tools.md
docs/extensibility/: components.md  custom-tools.md
docs/features/: context-management.md  human-in-the-loop.md  interactive-execution.md  modes.md  multi-agent.md  resources.md  streaming.md  structured-output.md  tasks.md
docs/getting-started/: configuration.md  quickstart.md
docs/guides/: mode-patterns.md
docs/maintainers/: code_example_migration.md
docs/reference/: built-in-agents.md
docs/stylesheets/: extra.css
examples/_shared/: mock_llm.py
examples/agent/: basic_chat.py
examples/components/: basic_component.py
examples/context/: thread_context.py
examples/docs/: agent_cleanup.py  agent_config_context.py  agent_context_scope.py  agent_custom_class.py  agent_debugging.py  agent_forking.py  agent_identity.py  agent_memory_management.py  agent_metrics.py  agent_monitored.py  agent_persistence.py  agent_pipeline.py  agent_pool_basics.py  agent_readiness.py  agent_registry.py  agent_revert.py  agent_state_machine.py  agent_template_functions.py  agent_template_variables.py  agent_troubleshooting_context.py  agent_troubleshooting_init.py  agent_troubleshooting_memory.py  agent_troubleshooting_state.py  agent_version_events.py  agents_basics.py  basic_agent.py  custom_tools_basic.py  custom_tools_best_practices_documentation.py  custom_tools_best_practices_error_handling.py  custom_tools_best_practices_focused.py  custom_tools_best_practices_validation.py  custom_tools_composition.py  custom_tools_context_access.py  custom_tools_dependency_injection.py  custom_tools_error_handling.py  custom_tools_parameter_validation.py  custom_tools_structured_returns.py  custom_tools_testing.py  events_basic_subscription.py  events_batch_processing.py  (+92 more)
examples/event_router/: async_sync_bridge.py  basic_usage.py
examples/events/: basic_events.py
examples/extensions/: citations_basic.py
examples/modes/: _cli_utils.py  basic_modes.py  cli_generator_modes.py  cli_interactive_modes.py  cli_isolation_modes.py  cli_run_all.py  cli_stacked_modes.py  cli_standalone_modes.py  cli_workflow_modes.py  mode_switching_tools.py  self_switching.py
examples/pool/: agent_pool.py
examples/resources/: editable_mdxl.py
examples/templates/: render_template.py
examples/testing/: README.md  handler_based_mocking.py
examples/tools/: basic_tool.py
examples/types/: identifier.py
notebooks/: basic.ipynb  sidecar.ipynb  spec.ipynb  test_new_llm_client.ipynb
openspec/: EVENT_SYSTEM_OVERHAUL.md  project.md
scripts/: debug_imports.py  measure_import_time.py  release.py  replace_tool_methods.py  reproduce_context_injection.py
tests/: README.md  VCR_USAGE.md  conftest.py  conftest_citation_skip.py  pytest.ini  test_examples.py  test_modes.py  test_modes_generators.py
(+553 files in other folders)
