[project]
name = "good-agent"
version = "0.2.0"
description = "A Good Agent"
readme = "README.md"
authors = [
    { name = "Chris Goddard", email = "chris@goodkiwi.llc" }
]
requires-python = ">=3.13"
dependencies = [
    "good-common>=1.2.1",
    "instructor>=1.12.0",
    "jinja2>=3.1.6",
    "lxml-html-clean>=0.4.3",
    "markdown>=3.9",
    "logfire>=1.0.0",
    "mcp>=1.0.0",
    "rich>=13.7.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "python-magic>=0.4.27",
    "types-lxml>=2025.8.25",
    # LLM client dependencies (replacing litellm)
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "good-dev>=0.1.1",
    "ipykernel>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "vcrpy>=7.0.0",
]
