[project]
name = "good-agent"
version = "0.2.0"
description = "A Good Agent"
readme = "README.md"
authors = [
    { name = "Chris Goddard", email = "chris@goodkiwi.llc" }
]
requires-python = ">=3.13"
dependencies = [
    "good-common>=1.2.1",
    "instructor>=1.12.0",
    "jinja2>=3.1.6",
    "lxml-html-clean>=0.4.3",
    "markdown>=3.9",
    "litellm>=1.50.0",
    "logfire>=1.0.0",
    "mcp>=1.0.0",
    "rich>=13.7.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "python-magic>=0.4.27",
    "types-lxml>=2025.8.25",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "good-dev>=0.1.1",
    "ipykernel>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.3",
    "vcrpy>=7.0.0",
]



[tool.pytest.ini_options]
# Define where pytest should look for tests
# Only include root tests to avoid provider conftest conflicts
# Provider tests should be run separately from their package directory
testpaths = ["tests"]
# Ensure root directory is in Python path
pythonpath = ["."]
# Prevent conftest.py import conflicts by using importlib
# Force namespace packages to avoid module name conflicts
# Skip prefect_harness tests by default (use -m prefect_harness to run them)
addopts = "--import-mode=importlib --strict-config --confcutdir=. -m 'not slow'"
# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
# Directories to skip during collection
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".venv", "node_modules"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(pathname)s:%(lineno)d - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "unit",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Ignore deprecation warning from clickhouse_connect about utcfromtimestamp
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:clickhouse_connect.datatypes.temporal",
    # Ignore connection pool warnings that are expected in concurrent tests
    "ignore:Connection pool is full:UserWarning",
]
