[project]
name = "good-agent"
version = "0.2.0"
description = "A Good Agent"
readme = "README.md"
authors = [
    { name = "Chris Goddard", email = "chris@goodkiwi.llc" }
]
requires-python = ">=3.13"
dependencies = [
    "good-common>=1.2.1",
    "instructor>=1.12.0",
    "jinja2>=3.1.6",
    "lxml-html-clean>=0.4.3",
    "markdown>=3.9",
    "litellm>=1.50.0",
    "mcp>=1.0.0",
    "rich>=13.7.0",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "python-magic>=0.4.27",
    "types-lxml>=2025.8.25",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "good-dev>=0.1.1",
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pyupgrade>=3.21.1",
    "ruff>=0.14.3",
    "types-markdown>=3.10.0.20251106",
    "vcrpy>=7.0.0",
]



[tool.pytest.ini_options]
# Define where pytest should look for tests
# Only include root tests to avoid provider conftest conflicts
# Provider tests should be run separately from their package directory
testpaths = ["tests"]
# Ensure root directory is in Python path
pythonpath = ["."]
# Prevent conftest.py import conflicts by using importlib
# Force namespace packages to avoid module name conflicts
# Skip prefect_harness tests by default (use -m prefect_harness to run them)
addopts = "--import-mode=importlib --strict-config --confcutdir=. --ignore-glob='**/.archive/**' -m 'not slow'"
# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
# Directories to skip during collection
norecursedirs = ["*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".venv", "node_modules", ".archive"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(pathname)s:%(lineno)d - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "unit",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running",
    "performance: marks tests that measure performance metrics",
    "benchmark: marks benchmark-focused tests",
    "requires_signals: tests that rely on signal handling",
    "timeout: tests with custom timeout behavior",
    "skip_coverage(reason): tests excluded from coverage collection (requires rationale)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Ignore deprecation warning from clickhouse_connect about utcfromtimestamp
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:clickhouse_connect.datatypes.temporal",
    # Ignore connection pool warnings that are expected in concurrent tests
    "ignore:Connection pool is full:UserWarning",
    # LiteLLM triggers noisy Pydantic serialization warnings when dumping responses
    "ignore:Pydantic serializer warnings::UserWarning",
    # LiteLLM's cleanup still calls asyncio.get_event_loop()
    "ignore:There is no current event loop:DeprecationWarning",
    # aiohttp connector emits a deprecation warning on Python 3.13+
    "ignore:enable_cleanup_closed ignored because:DeprecationWarning",
    # litellm inspects model_fields/model_computed_fields on instances
    "ignore:Accessing the 'model_fields' attribute::",
    "ignore:Accessing the 'model_computed_fields' attribute::",
    # litellm still calls BaseModel.dict()
    "ignore:The `dict` method is deprecated::",
]

[tool.coverage.run]
branch = true
source = ["src/good_agent"]
omit = [
    "src/good_agent/agent/__init__.py",
    "src/good_agent/components/__init__.py",
    "src/good_agent/components/template_manager/__init__.py",
]

[tool.coverage.report]
fail_under = 80.0
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]
